--- a/app/src/main/res/layout/rent_buy.xml
+++ b/app/src/main/res/layout/rent_buy.xml
@@ -104,13 +104,13 @@
                             android:textColor="@color/nexter" />
 
                         <com.shawnlin.numberpicker.NumberPicker
-                            android:id="@+id/number_picker_n"
+                            android:id="@+id/number_picker_rent"
                             android:layout_width="match_parent"
                             android:layout_height="match_parent"
                             android:layout_margin="8dp"
                             app:np_dividerColor="@color/nexter"
                             app:np_formatter="@string/number_picker_formatter"
-                            app:np_max="59"
+                            app:np_max="48"
                             app:np_min="0"
                             app:np_orientation="horizontal"
                             app:np_selectedTextColor="@color/nexter"
@@ -118,7 +118,7 @@
                             app:np_textColor="@color/nexter"
                             app:np_textSize="@dimen/text_size"
                             app:np_typeface="@string/roboto_light"
-                            app:np_value="3" />
+                            app:np_value="0" />
 
                     </LinearLayout>
 
@@ -130,6 +130,7 @@
                         android:padding="16dp">
 
                         <TextView
+                            android:id="@+id/rent_fee"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_gravity="center"
