--- a/app/src/main/res/layout/content_gallery_only.xml
+++ b/app/src/main/res/layout/content_gallery_only.xml
@@ -8,31 +8,16 @@
     app:cardCornerRadius="12dp"
     app:cardPreventCornerOverlap="false"
     app:cardUseCompatPadding="true"
-    tools:context=".MainActivity"
+    tools:context=".NewRentActivity"
     tools:showIn="@layout/activity_main">
 
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-        <androidx.appcompat.widget.AppCompatImageView
-            android:id="@+id/imgGalleryCode"
-            style="@style/ImageButtonStyle"
-            android:layout_alignParentEnd="true"
-            android:onClick="showImageCode"
-            app:srcCompat="@drawable/outline_code_24" />
-
-        <androidx.appcompat.widget.AppCompatImageView
-            android:id="@+id/imgGalleryInfo"
-            style="@style/ImageButtonStyle"
-            android:layout_toStartOf="@id/imgGalleryCode"
-            android:onClick="showImageInfo"
-            app:srcCompat="@drawable/outline_info_24" />
-
         <androidx.appcompat.widget.AppCompatTextView
             android:id="@+id/txtGallery"
             style="@style/TitleTextStyle"
-            android:layout_toStartOf="@id/imgGalleryInfo"
             android:text="@string/action_gallery_only" />
 
         <androidx.appcompat.widget.AppCompatImageView
