--- a/app/src/main/res/layout/rent_buy.xml
+++ b/app/src/main/res/layout/rent_buy.xml
@@ -31,6 +31,7 @@
 
                     <!-- Media -->
                     <ImageView
+                        android:id="@+id/image_rent_buy"
                         android:layout_width="match_parent"
                         android:layout_height="194dp"
                         android:contentDescription="@string/snack_card_two_description"
